# GT_Research_w-CJ

./: README.md
emg_device/: setup.cfg  setup.py
emg_device/emg_device/: emg_node.py  real_time_filter.py
emg_device/emg_device/models/: emg_cnn_model.pt
emg_device/launch/: emg_signal_launch.py
install/: local_setup.sh  setup.sh
install/emg_device/lib/emg_device/: emg_classifier_node  emg_node
install/emg_device/share/emg_device/: package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/emg_shadow_hand_bridge/lib/emg_shadow_hand_bridge/: shadow_hand_gesture_control
install/emg_shadow_hand_bridge/share/emg_shadow_hand_bridge/: package.dsv  (+5 more)
log/: latest_build
src/data/: emg_data_20251002_151815.csv  emg_data_20251013_175412.csv
src/emg_connect/script/: bluetooth_dialog.py  main_gui.py  preprocessing.ipynb
src/emg_device/emg_device/: emg_ascii_plot.py  emg_classifier_node.py  model_emg.py
src/emg_device/launch/: emg_full_pipeline_launch.py
src/emg_shadow_hand_bridge/: package.xml  setup.cfg  setup.py
src/emg_shadow_hand_bridge/emg_shadow_hand_bridge/: shadow_hand_gesture_control.py
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/emg_device/share/emg_device/: package.bash  package.dsv  package.ps1  package.sh  package.xml
src/log/: latest_build
src/shadow_hand_controller/: package.xml  setup.cfg  setup.py
src/shadow_hand_controller/launch/: follow_shadow_hand.launch.py
src/shadow_hand_controller/shadow_hand_controller/: shadow_hand_control.py  shadow_hand_keyctl.py  shadow_hand_relay.py
(+21 files in other folders)
